--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "inter"; sans-serif;
+    font-family: "Inter", sans-serif;
 }
 
 :root {
@@ -21,7 +21,7 @@
 }
 
 body{
-    font-size: 1.6irem;
+    font-size: 1.6 rem;
     background: var(--very-light-blue);
 }
 
@@ -96,7 +96,7 @@ margin-bottom: 2.4rem;
 .resumo > div div {
     display: flex;
     align-items: center;
-    gap; 1.2rem;
+    gap: 1.2rem;
 }
 
 .resumo > div strong {
@@ -141,7 +141,7 @@ margin-bottom: 2.4rem;
 
 @media (min-width: 736px) {
     body {
-        min-width: 100svh;
+        min-height: 100svh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -151,30 +151,28 @@ margin-bottom: 2.4rem;
         grid-template-columns: 1fr 1fr;
         width: 736px;
         background: var(--white);
-        border-radius: 3.2rem;
+        border-radius: 3.2rem 0 0 3.2rem;
     }
 
     .resultado {
         padding-block: 3.8rem;
         border-radius: 3.2rem;
     }
-}
-
-.resultado h1 {
-    font-size: 1.4rem;
+    .resultado h1{
+    font-size: 2.4rem;
     margin-bottom: 3.6rem;
-}
-.resultado div {
+    }
+    .resultado div {
     width: 20rem;
     height: 20rem;
     margin-bottom: 2.8rem;
-}
+    }
 
 .resultado div strong:nth-of-type(1) {
     font-size: 7.2rem;
 }
 
-.resultado div strong: :nth-of-type(2) {
+.resultado div strong:nth-of-type(2) {
 
     font-size: 1.8rem;
 }
@@ -209,4 +207,4 @@ margin-bottom: 2.4rem;
         background: var(--resultado-bg);
         cursor: pointer;
     }
-}
+}    
